"ChangeLog"

2005-04-28	David Fang		<fangism@users.sourceforge.net>

	* Minor clarifications about types.  


2005-04-19	David Fang		<fangism@users.sourceforge.net>

	* More notes on template definitions, specializations.  


2005-04-18	David Fang		<fangism@users.sourceforge.net>

	* Added much discussion and notes on the issues with template
	  specializations.  

	* Added some notes about definitions regarding definition families
	  and layout maps.  Templates, of course, complicate things.  

	* This ChangeLog file was born.  
