@@ -1,5 +1,7 @@
 % "chapters/goals.tex"
 
+%	$Id: goals.tex,v 1.2.2.1 2005/05/02 20:21:24 fang Exp $
+
 \chapter{Goals}
 \label{sec:goals}
 
@@ -75,6 +77,7 @@ Parallel or serial?
 
 Objectives.
 Area, energy, performance, efficiency.  
+How about aesthetics and simplicity (design time)?  
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Asynchrony}
