@@ -1,5 +1,12 @@
 "ChangeLog"
 
+2005-05-01	David Fang		<fangism@users.sourceforge.net>
+
+	* ARTXX-00-01-04-main-00-27-templates-01-04:
+	  Added examples of using strict and relaxed parameters with arrays.  
+	  Outlined section on complex aggregate references in "arrays.tex".
+
+
 2005-04-28	David Fang		<fangism@users.sourceforge.net>
 
 	* Minor clarifications about types.  
